# BRAF

./: .env.example  .env.live  .env.maxel  .env.production  .gitignore  BRAF_AWS_DEPLOYMENT.md  BRAF_CAPABILITIES_REPORT.md  BRAF_COMMAND_REFERENCE.md  BRAF_DETAILED_CAPABILITIES_REPORT.md  BRAF_FRAMEWORK_REPORT_2024.md  BRAF_LIVE_MONEY_README.md  BRAF_OPTIMIZATION_REPORT.md  BRAF_SUPER_INTELLIGENCE_CAPABILITY_REPORT.md  CONTINUOUS_OPERATION_GUIDE.md  Dockerfile  EXTENDED_BRAF_VS_SENTINEL_TEST.md  GITHUB_ACTIONS_GUIDE.md  LIVE_BRAF_VS_SENTINEL_TEST.md  LIVE_DEPLOYMENT_SETUP_GUIDE.md  LIVE_EXECUTION_FRAMEWORK.md  MAXELPAY_btc_withdrawal_MAXELPAY_btc_tx_1767705236.json  MONEY_SOLUTION.md  Makefile  NIGERIA_MAJOR_TARGET_REPORT.md  Procfile  QUICK_START_GUIDE.md  RAILWAY_DEPLOY_README.md  README.md  RENDER_DEPLOY_README.md  SENTINEL_SECURITY_MANIFESTO.md  TODO.md  USAGE_GUIDE.md  WORKER_SYSTEM_GUIDE.md  addJob.js  advanced_stealth_withdrawal.py  alembic.ini  balance_capacity_test.py  balance_conversion_test.py  braf-jobs.js  braf-monetization.service  (+80 more)
BRAF/: README.md  WHY_NO_MONEY_IN_MAXEL.md  get_maxel_deposit_address.py  requirements.txt  run_immediate_earnings.py  scraper.py  setup_direct_maxel_earnings.py  start_monetization_dashboard.py  test_automation_monetization.py  test_braf.py  test_maxel_connectivity.py  test_monetization_dashboard.py  transfer_to_maxel.py
automation/: __init__.py  browser_automation.py
config/: development.yaml  real_earning_config.json  staging.yaml  testing.yaml
core/: __init__.py
dashboard/: __init__.py
data/: monetization_data.json
docker/: Dockerfile.c2  Dockerfile.monitoring  Dockerfile.worker
migrations/: env.py
monetization/: __init__.py  earnings_tracker.py
monetization-system/: .env.production  ACCOUNT_CREATION_GUIDE.md  BRAF_COMPLETE_SYSTEM_REVIEW.md  BRAF_SYSTEM_SUMMARY.md  BRAF_WORKER_DEPLOYMENT_SUMMARY.md  BRAF_WORKER_FINAL_UPDATE.md  BUILD_INFO.md  COMPLETE_BACKUP_SYSTEM_SUMMARY.md  CRYPTOCURRENCY_AUDIT_REPORT.md  DASHBOARD_ENHANCEMENT_SUMMARY.md  DASHBOARD_GUIDE.md  DATABASE_MODULES_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PACKAGE_SUMMARY.md  DEPLOYMENT_REQUIREMENTS.md  DEPLOYMENT_TASKS.md  DOCKER_BUILD_FIXES.md  DOCKER_CRYPTO_DEPLOYMENT_GUIDE.md  DOCKER_DEPENDENCIES_GUIDE.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_PRODUCTION_GUIDE.md  Dockerfile  Dockerfile.minimal  Dockerfile.production  Dockerfile.worker  ENHANCED_BRAF_SYSTEM_SUMMARY.md  ENHANCED_WITHDRAWAL_SUMMARY.md  FINAL_DEPLOYMENT_SUMMARY.md  FULL_DEPLOYMENT_COMMANDS.md  INSTALLATION.md  INSTALLATION_SUMMARY.md  LIVE_DEPLOYMENT_SUMMARY.md  LIVE_INTEGRATION_DEPLOYMENT.md  LIVE_INTEGRATION_GUIDE.md  MAINTENANCE_SCRIPTS_SUMMARY.md  MODULAR_SCRAPER_SUMMARY.md  Makefile  NEXUS7_INSTALLATION_COMPLETE.md  PLAYWRIGHT_INTEGRATION_SUMMARY.md  (+133 more)
monitoring/: prometheus.yml
payments/: maxel_integration.py
runners/: local_runner.py
scrapers/: __init__.py  browser_scraper.py  http_scraper.py
(+205 files in other folders)
